2007-11-10  Alp Toker  <alp@atoker.com>

	* samples/embed/teste.c: Add a newline at the end of this printf()

2007-11-08  Wade Berrier  <wberrier@novell.com>

	* configure.in: add sysconfdir for mcs config.make
	version bump -> 1.2.6

2007-11-07  Geoff Norton  <gnorton@novell.com>

	* configure.in: Add a check for sockaddr_in(6).sin(6)_len

2007-11-05  Geoff Norton  <gnorton@novell.com>

	* configure.in: Set GMODULE_CFLAGS and GMODULE_LIBS to be set
	with eglib as well

2007-10-30  Raja R Harinath  <harinath@gmail.com>

	* runtime/Makefile.am ($(tmpinst)/bin/gmcs): Update rule to point
	to location of 'gmcs.exe'.

2007-10-29  Raja R Harinath  <rharinath@novell.com>

	* configure.in (olive_topdir): Look for $olivedir in the source tree.

2007-10-19  Marek Habersack  <mhabersack@novell.com>

	* scripts/Makefile.am (scripts_2_0): added mconfig to the list

2007-10-09  Wade Berrier  <wberrier@novell.com>

	* configure.in: Split up the mono version that goes into Consts.cs 
	to make sure each segment is no longer than 4 digits.  
	This allows svn revisions to be used.

2007-10-02  Miguel de Icaza  <miguel@novell.com>

	* scripts/mono-test-install: (temp_exe): Add tests for dynamic
	libraries that libgdiplus might be missing

	Add detection and diagnostics for
	broken System.Drawing installations.

2007-09-19  Jb Evain  <jbevain@novell.com>

	* configure.in: if there's a olive directory in the same folder
	as mono, we now override its config.make, so that we don't build
	the olive moonlight assemblies if mono is not build with moonlight
	support.

2007-09-18  Andreas Faerber  <andreas.faerber@web.de>

	* configure.in: Add support for building on Linux/ppc64 host.

2007-09-18  Marek Habersack  <mhabersack@novell.com>

	* configure.in: added additional Makefile to be generated in the
	mono/tests/assemblyresolve/ subdir.

2007-09-17  Zoltan Varga  <vargaz@gmail.com>

	* docs/memory-management.txt: A new file describing metadata memory management.
