@@ -1631,6 +1631,18 @@ if test "x$try_shared_handles" != "xyes"; then
 	AC_SUBST(DISABLE_SHARED_HANDLES)
 fi
 
+# Check for glib functions that we can do without if they aren't present.
+# This means we don't have to make the required version too new for some
+# prehistoric distros we still have to build on.
+OLD_LIBS="$LIBS"
+LIBS="$LIBS $GLIB_LIBS"
+OLD_CPPFLAGS="$CPPFLAGS"
+CPPFLAGS="$CPPFLAGS $GLIB_CFLAGS"
+AC_CHECK_FUNCS(g_strsplit_set)
+AC_CHECK_FUNCS(g_strv_length)
+LIBS="$OLD_LIBS"
+CPPFLAGS="$OLD_CPPFLAGS"
+
 AC_ARG_ENABLE(nunit-tests, [ --enable-nunit-tests	Run the nunit tests of the class library on 'make check'])
 AM_CONDITIONAL(ENABLE_NUNIT_TESTS, [test x$enable_nunit_tests = xyes])
 
